<resources>
    <string name="app_name">deGustibus</string>

    <!-- Fragment Titles -->
    <string name="title_Home" translatable="false">deGustibus</string>
    <string name="title_Notifications">Notifications</string>
    <string name="title_Profile">Profile</string>
    <string name="title_EditProfile">Edit</string>
    <string name="title_first_Edit">Set Your Profile</string>
    <string name="title_Settings">Settings</string>
    <string name="title_Restaurant">Restaurant</string>
    <string name="title_Order">New order</string>

    <!-- Menu Titles -->
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <!-- Settings -->
    <string name="set_TitleModify">Modify Password</string>
    <string name="set_TitleDelete">Delete Account</string>
    <string name="set_TitleLogout">Logout</string>
    <string name="set_CatAccount" translatable="false">Account</string>
    <string name="set_SumModify">Click here to insert a new password</string>
    <string name="set_SumDelete">This operation will remove the account permanently</string>

    <!-- EDIT PROFILE -->
    <string name="frProfile_name">Name</string>
    <string name="frProfile_email" translatable="false">Email</string>
    <string name="frProfile_desc">Description</string>
    <string name="frProfile_phone">Phone</string>
    <string name="frProfile_addr">Address</string>

    <string name="frProfile_defName" translatable="false">Mario Rossi</string>
    <string name="frProfile_defEmail" translatable="false">mario.rossi@polito.it</string>
    <string name="frProfile_defDesc">Love pizza and pasta.</string>
    <string name="frProfile_defPhone" translatable="false">012 3456789</string>
    <string name="frProfile_defAddr" translatable="false">Corso Duca degli Abruzzi, 24</string>

    <!-- Utils -->
    <string name="camera">Capture photo from camera</string>
    <string name="saved">Saved!</string>
    <string name="gallery">Select from gallery</string>
    <string name="select_action">Select action</string>
    <string name="permission_denied">Please, enable the requested permissions to access this functionality!</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- Authentication -->
    <string name="action_sign_in_short">Register</string>
    <string name="reg_email" translatable="false">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="connect_failed">Please, check your internet connection!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in deGustibus now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password" translatable="false">Reset Password</string>
    <string name="btn_back" translatable="false"><![CDATA[<< Back]]></string>
    <string name="btn_send">Send</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>

    <string name="err_emailMiss">Enter email address!</string>
    <string name="err_passMiss">Enter password!</string>
    <string name="psw_changed">Password changed successfully!</string>
    <string name="err_passShort">Password too short, enter minimum 6 characters!</string>
    <string name="reg_compl">Registration completed successfully, welcome!</string>
    <string name="err_reg">Authentication failed.</string>
    <string name="pass_ok">We have sent you instructions to reset your password!</string>
    <string name="pass_err">Failed to send reset email!</string>
    <string name="or" translatable="false">OR</string>
    <string name="es_title" translatable="false">Pizza Express</string>
    <string name="title_daily_list">Daily Menu</string>
    <string name="es_street" translatable="false">Via Montebello, 13 - Torino (TO)</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="subtitle_user">User</string>
    <string name="Date">Date</string>
    <string name="Hour">Hour</string>
    <string name="es_subtitle" translatable="false">subtitle</string>
    <string name="es_text" translatable="false">Lorem ipsum dolor sit amet, orci volutpat pede, at et ratione eleifend, nulla ipsum nascetur nulla, tincidunt a odio cras elementum, sapien nulla amet.</string>
    <string name="btn_new_reservation">NEW RESERVATION</string>
    <string name="btn_or">OR</string>
    <string name="nameSearch">Restaurant name</string>
    <string name="addressSearch">Restaurant address</string>
    <string name="reservation_date">Date</string>
    <string name="reservation_time">Time</string>

    <string name="err_notification">Well done! You\'ve managed all the notifications!</string>
    <string name="err_connection">It seems you\'re not connected! Please enable your Internet connection&#8230;</string>
    <string name="err_reservations">Ops&#8230; nothing to show here!</string>

    <string name="select">Please, select at least one element!</string>
    <string name="done">Done!</string>
    <string name="desc">You have received a new order! Check in your reservation box</string>

    <string name="summary">Summary</string>
    <string name="address">"Address: "</string>
    <string name="products">Products</string>
    <string name="total">"Total: "</string>
    <string name="order">Complete order</string>
    <string name="errProfile">Complete your profile before continuing!</string>
    <string name="channel_name" translatable="false">channel</string>
    <string name="new_notification">New notification!</string>
    <string name="notification_message">Open the notification section ...</string>

    <string name="typeNot_refused">Refused order</string>
    <string name="typeNot_incoming">Incoming order</string>
    <string name="typeNot_accepted">Order accepted</string>
    <string name="typeNot_deliverying">Delivering order</string>
    <string name="typeNot_done">Delivered</string>
    <string name="typeNot_noRider">No rider available</string>
    <string name="desc1">Oh no! It seems your order has been refused by</string>
    <string name="desc2">" because no rider is currently available!"</string>
    <string name="desc3">Your order #</string>
    <string name="desc4">has been confirmed by</string>
    <string name="desc5">You have received a new order #</string>
    <string name="desc6">to be delivered. \\nCheck details in your incoming box.</string>
    <string name="desc7">Your order has been accepted by </string>
    <string name="desc8">Your order will be delivered by </string>
    <string name="desc9"> has been delivered!</string>

    <string name="err_name">Name is required!</string>
    <string name="err_desc">Description is required!</string>
    <string name="err_phone">Phone is required!</string>
    <string name="err_addr">Address is required!</string>
    <string name="title_orders">Orders</string>
    <string name="resStatus">Status:</string>
    <string name="resDeliveryman">Deliveryman:</string>
    <string name="resRestaurant">Restaurant:</string>
    <string name="resDate">Date:</string>
    <string name="resHour">Hour:</string>
    <string name="resTotal">Total:</string>
    <string name="menu_reservations">Reservations</string>
    <string name="status_new">Waiting for restaurant</string>
    <string name="status_incoming">Incoming</string>
    <string name="status_refused">Refused</string>
    <string name="status_done">Done</string>
    <string name="status_elaboration">elaboration</string>
    <string name="status_delivering">Delivering</string>
    <string name="no_rider">Not assigned</string>
    <string name="received">Received</string>
    <string name="buttonPick">Pick</string>
    <string name="buttonDeliver">Deliver</string>
    <string name="typeNot_new">New</string>

    <string name="search_hint">Search</string>

    <!-- Steps -->
    <string name="step1">Incoming</string>
    <string name="step2">Elaboration</string>
    <string name="step3">Delivering</string>
    <string name="step4">Done</string>

    <!-- Evaluation -->
    <string name="evaluation_Title">Evaluation completed</string>
    <string name="evaluation_Desc">Thanks for your evaluations! Restaurateurs will collect them to improve their work!</string>
    <string name="evaluation_Err">Please, evaluate all items!</string>

    <!-- Views -->
    <string name="quantity">"Quantity: "</string>
    <string name="reviews">Reviews</string>
    <string name="comment">Write here your comment</string>
    <string name="sendButton">Send reviews</string>
    <string name="orderButton">Order</string>
    <string name="minRate">Minimum rate</string>
    <string name="preferred">Preferred</string>
    <string name="filter">Filter Results</string>

    <string name="orderTitle">Order completed!</string>
    <string name="orderDesc">"Thank you! ;)\nYour order has been sent to the restaurant! You will receive a notification as soon as the restaurant will conferm the order!"</string>
    <string name="modPassword">Modify Password</string>
    <string name="passwordHint">New Password</string>
    <string name="passwordRepHint">Repeat Password</string>
    <string name="err_gen">Ops... something went wrong!</string>
    <string name="deleteTitle">Delete account</string>
    <string name="deleteDesc">This operation will remove your account permanently, are you sure that you want to continue?</string>
    <string name="deleteCompleted">Account deleted!</string>
    <string name="err_passSame">Passwords are not the same, please insert them correctly!</string>
    <string name="title_Reservations">Reservations</string>
    <string name="title_Details">Details</string>
    <string name="nothing">Ops&#8230; there\'s nothing here!</string>
    <string name="no_favourite">It seems you havent\'t any favourite restaurant!</string>
    <string name="compulsoryRating">Click  the stars to give a rate</string>
</resources>
