<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_drawable"
            android:orientation="vertical"
            android:showDividers="end">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:src="@drawable/user_profile" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_showD_fullName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frProfile_name"
            android:theme="@style/TextView" />

        <TextView
            android:id="@+id/tv_show_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextViewShow" />

        <TextView
            android:id="@+id/tv_showD_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frProfile_email"
            android:theme="@style/TextView" />

        <TextView
            android:id="@+id/tv_show_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextViewShow" />

        <TextView
            android:id="@+id/tv_showD_desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frProfile_desc"
            android:theme="@style/TextView" />

        <TextView
            android:id="@+id/tv_show_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:theme="@style/TextViewShow" />

        <TextView
            android:id="@+id/tv_showD_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frProfile_phone"
            android:theme="@style/TextView" />

        <TextView
            android:id="@+id/tv_show_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextViewShow" />

        <TextView
            android:id="@+id/tv_showD_address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frProfile_addr"
            android:theme="@style/TextView" />

        <TextView
            android:id="@+id/tv_show_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextViewShow" />
    </LinearLayout>
</ScrollView>
