<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_drawable"
            android:orientation="vertical"
            android:showDividers="end">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:onClick="getPhoto"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:src="@drawable/user_profile" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_edit_fullName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frProfile_name"
            android:theme="@style/TextView" />

        <EditText
            android:id="@+id/et_edit_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tv_edit_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frProfile_email"
            android:theme="@style/TextView" />

        <EditText
            android:id="@+id/et_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tv_edit_desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frProfile_desc"
            android:theme="@style/TextView" />

        <EditText
            android:id="@+id/et_edit_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/tv_edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frProfile_phone"
            android:theme="@style/TextView" />

        <EditText
            android:id="@+id/et_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tv_edit_address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/frProfile_addr"
            android:theme="@style/TextView" />

        <EditText
            android:id="@+id/et_edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress" />
    </LinearLayout>
</ScrollView>
